--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
+* {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
+
 .App {
-  text-align: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 60vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+	box-shadow: 1px 1px 5px grey;
+	width: 60vw;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 1em;
+}
+.input-container {
+	width: 100%;
+	height: 8vh;
+	display: flex;
+}
+.input-container > * {
+	font-size: 5vh;
+	border-radius: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.input-container > input {
+	width: 80%;
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-container > button {
+	width: 20%;
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
 }
